src/test/deca/syntax/valid/created/test_unaryMinus.deca
//Description:
//test de UnaryMinus
//
//Resultat:
//

{
    float x = 1;
    x = -x;
    x = - (x+x);
}