src/test/deca/syntax/invalid/created/test_probleme_ordonner.deca
{
   
    println("Factorielle de ");
    float sum = 0.0;
}